<resources>
    <string name="app_name">NUMAD22Sp_ShujunXiao</string>
    <string name="about_me">About Me</string>
    <string name="clicky_clicky">Clicky Clicky</string>
    <string name="a">A</string>
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="press">Pressed: -</string>
    <string name="pressed">Pressed: </string>
    <string name="name_shujun_xiao_nemail_xiao_shu_northeastern_edu">Name: Shujun Xiao\nEmail: xiao.shu@northeastern.edu</string>
    <string name="link_collector">Link Collector</string>
    <string name="add_link">Add Link</string>
    <string name="name">name</string>
    <string name="link">link</string>
    <string name="checkbox">CheckBox</string>
    <string name="enter_link">Enter Link</string>
    <string name="enter_name">Enter Name</string>
    <string name="add">Add</string>
    <string name="empty">Empty</string>
    <string name="add_item">Add item with the bottom buttom</string>
    <string name="location">Location</string>
    <string name="longtitude">Longtitude</string>
    <string name="latitude">Latitude</string>
    <string name="web_service">Web Service</string>
    <string name="ping_web_service">Ping Web Service</string>
    <string name="please_input_a_movie_name">Please Input a Movie Name</string>
    <string name="movie_poster">movie poster</string>
    <string name="loading">Loading</string>
    <string name="please_input_year_optional">Please Input Year (optional)</string>
    <string name="a_default_movie_information">A default movie information will be shown if no movie name or year is detected.</string>
</resources>