<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ButtonActivity">

    <Button
        android:id="@+id/button_d"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/d"
        app:layout_constraintEnd_toStartOf="@+id/button_e"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_a" />

    <Button
        android:id="@+id/button_e"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/e"
        app:layout_constraintEnd_toStartOf="@+id/button_f"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_d"
        app:layout_constraintTop_toBottomOf="@+id/button_b" />

    <Button
        android:id="@+id/button_f"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:layout_marginTop="32dp"
        android:text="@string/f"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_e"
        app:layout_constraintTop_toBottomOf="@+id/button_c" />

    <Button
        android:id="@+id/button_b"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:text="@string/b"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_c"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_a"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button_a"
        android:layout_width="69dp"
        android:layout_height="48dp"
        android:text="@string/a"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/button_b"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <Button
        android:id="@+id/button_c"
        android:layout_width="72dp"
        android:layout_height="48dp"
        android:text="@string/c"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_b"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.3" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/press"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_e"
        app:layout_constraintVertical_bias="0.00" />
</androidx.constraintlayout.widget.ConstraintLayout>